samples/_failures_safe/1761166781_06e0a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f55b6848.c: In function ‘main’:
./samples/SAFE/__tmp_f55b6848.c:136:5: error: expected declaration or statement at end of input
  136 |     if (count == 0) {
      |     ^~
./samples/SAFE/__tmp_f55b6848.c:136:5: error: expected declaration or statement at end of input
